Fix overflow-x issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -29,17 +29,17 @@ button,
 
 html {
   font-size: 16px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 body {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   background: #fafafa;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 main {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   width: 100%;
   height: 100%;
   min-height: 100vh;
@@ -78,6 +78,10 @@ p {
 
 .highlight__orange {
   color: #f7d05a;
+}
+
+.hide-overflow {
+  overflow-x: hidden;
 }
 
 /* ==========
